observability/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.jbessa.tech`)
      services:
        - name: grafana
          port: 80
  tls: {}
